Documentacion y pipeline